--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Logout{% endblock %}
+{% block title %}<title> Logout</title>{% endblock %}
 {% block content %}
 <div class="row text-center vertical-middle-sm">
     <p>You have log out.</p>
