--- a/templates/account/password_reset_confirm.html
+++ b/templates/account/password_reset_confirm.html
@@ -9,11 +9,11 @@
     <form class="form-horizontal" action="." method="post">{% csrf_token %}
         <div class="form-group">
             <label class='col-md-5 control-label text-right'>New password</label>
-            <div class="col-md-6 text-left">{{ form.new_password1 }}</div>
+            <div class="col-md-6 col-sm-offset-4">{{ form.new_password1 }}</div>
         </div>
         <div class="form-group">
             <label class='col-md-5 control-label text-right'>Confirm password</label>
-            <div class="col-md-6 text-left">{{ form.new_password2 }}</div>
+            <div class="col-md-6 col-sm-offset-4">{{ form.new_password2 }}</div>
         </div>
         <input type="submit" value="Change my password" class="btn btn-primary btn-lg" />
     </form>
