--- a/templates/account/password_reset_email.html
+++ b/templates/account/password_reset_email.html
@@ -9,6 +9,6 @@
     {% endbuttons %}
     <p> If you did not request to reset your password please ignore this email.</p>
 
-    <p>Thanks for using our site!</p>
+    <p>Thanks for using my site!</p>
 </div>
 {% endblock %}
