--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,6 +1,6 @@
-<div class="container">
+<div class="footer">
     <hr>
     <p class="text-center">
-        copy right strivexj
+        ©2018 strivexj
     </p>
 </div>
