--- a/templates/account/myself.html
+++ b/templates/account/myself.html
@@ -53,7 +53,7 @@
                 {% if userinfo.photo %}
                 <img src="{{ userinfo.photo | striptags }}" class="img-circle" id="my_photo" name="user_face">
                 {% else %}
-                <img name="user_face" src="{% static 'images/newton.jpg' %}" class="img-circle" id="my_photo">
+                <img name="user_face" src="{% static 'images/icon.jpg' %}" class="img-circle" id="my_photo">
                 {% endif %}
 
             <div style="margin-right:100px"><button class="btn btn-primary btn-lg" id="upload_image" onclick="upload_image_layer()">upload my photo</button></div> 
