--- a/templates/article/list/article_titles.html
+++ b/templates/article/list/article_titles.html
@@ -3,8 +3,8 @@
 {% block title %}<title>Articles</title> {% endblock %}
 {% block content %}
 <div class="row text-center vertical-middle-sm">
-    <h1>阅读，丰富头脑，善化行为</h1>
-    <p>这里已经有{% total_articles %}篇文章供你阅读</p>
+    <h1>Share what you learned with others</h1>
+    <p>There have {% total_articles %} articles.</p>
 </div>
 <div class="container">
     {% for article in articles %}
@@ -12,11 +12,19 @@
         <a href="{{article.get_url_path}}" class="list-group-item active">
             <h4 class="list-group-item-heading">{{article.title}}</h4>
         </a>
-        <p class="list-group-item-text">作者：<a href="{% url 'article:author_articles' article.author.username %}">{{article.author.username}}</a></p>
-        <p class="list-group-item-text">概要：{{article.body|slice:'70'| linebreaks}}</p>
+
+        <p class="list-group-item-text">Author：<a
+                href="{% url 'article:author_articles' article.author.username %}">{{article.author.username}}</a>
+            &nbsp;{{article.created}}
+        </p>
+
+
+        <p class="list-group-item-text">{{article.body|slice:'150'|markdownabstract}}</p>
+        <!--<p class="list-group-item-text">{{article.body|slice:'70'| linebreaks}}</p>-->
+        <!--<p class="list-group-item-text">{{article.abstract}}</p>-->
     </div>
     {% endfor %}
-{% include "paginator.html" %}
+    {% include "paginator.html" %}
 </div>
 {% endblock %}
 
