support upload contact

--- a/templates/adaptation_list.html
+++ b/templates/adaptation_list.html
@@ -75,13 +75,13 @@
             <dl>
                 <dt class="question"><a href="{{adaptation.url}}"> {{adaptation.school}} &nbsp;&nbsp;&nbsp;</a>
                     <a href="/adaptationdetail/{{adaptation.id}}#bottom"> {{adaptation.type}}&nbsp;&nbsp;&nbsp; </a>
-                    <a href="/vaild/{{adaptation.id}}?origin={{adaptation.vaild}}">
-                        vaild:{{adaptation.vaild}}&nbsp;&nbsp;&nbsp; </a>
+                    <a href="/valid/{{adaptation.id}}?origin={{adaptation.valid}}">
+                        Valid:{{adaptation.valid}}&nbsp;&nbsp;&nbsp; </a>
                     <a href="/adapted/{{adaptation.id}}?origin={{adaptation.adapted}}">
-                        adapted:{{adaptation.adapted}} &nbsp;&nbsp;&nbsp;</a>
+                        Adapted:{{adaptation.adapted}} &nbsp;&nbsp;&nbsp;</a>
 
                     <a href="/delete/{{adaptation.id}}">
-                        delete </a>
+                        Delete </a>
                 </dt>
             </dl>
         </li>
