show adaptation list in a table.

--- a/templates/adaptation_detail.html
+++ b/templates/adaptation_detail.html
@@ -11,6 +11,8 @@
     {{adaptation.html|safe}}
 </div>
 <div id="bottom">
+    <a href="{{adaptation.url}}"> {{adaptation.school}} &nbsp;&nbsp;&nbsp;</a>
+
     <a href="/valid/{{adaptation.id}}?origin={{adaptation.valid}}">
         Valid:{{adaptation.valid}}&nbsp;&nbsp;&nbsp; </a>
     <a href="/adapted/{{adaptation.id}}?origin={{adaptation.adapted}}">
