--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,9 @@
             padding-bottom: 30px;
             overflow: hidden;
         }
+        td{
+            padding: 10px;
+        }
     </style>
 </head>
 <body>
